--- a/docker/Dockerfile.migrations
+++ b/docker/Dockerfile.migrations
@@ -2,8 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY . /app
+COPY requirements.txt .
 
-RUN pip install psycopg2-binary python-dotenv
+RUN pip install --no-cache-dir psycopg2-binary python-dotenv
+
+COPY . /app
 
 CMD ["python", "database/init_db.py"]
