--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     depends_on:
       - redis
       - postgres
-    command: ["rq-scheduler", "--host", "redis", "--port", "6379", "--db", "0"]
+    command: ["python", "-m", "rq_scheduler", "--host", "redis", "--port", "6379", "--db", "0"]
     volumes:
       - ./:/app
 
