--- a/docker/Dockerfile.bot
+++ b/docker/Dockerfile.bot
@@ -1,5 +1,6 @@
 FROM python:3.11-slim
 
+# ОБЯЗАТЕЛЬНО!
 WORKDIR /app
 
 COPY requirements.txt .
@@ -8,4 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app
 
+# ОБЯЗАТЕЛЬНО запускать из bot/ внутри /app
 CMD ["python", "bot/bot.py"]
