--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -8,4 +8,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app
 
-CMD ["python", "worker/worker.py"]
+# Для основного worker-а
+CMD ["python", "-m", "worker.worker"]
