--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ POSTGRES_PORT=5432
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
+REDIS_URL=redis://redis:6379/0
 
 
 #############################
