--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,8 @@ rq-scheduler==0.13.1
 #############################
 # OpenAI ChatGPT API
 #############################
-openai==1.12.0
+openai>=1.40.0
+httpx>=0.27.0
 
 
 #############################
